ingress-tls/ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-tls
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: gcp-souravs-me
    kubernetes.io/ingress.allow-http: "false"

spec:
  tls:
    - hosts:
      - gcp.souravs.me
      secretName: ingress-tls-secret
  rules:
  - host: gcp.souravs.me
    http:
      paths:
        - path: /
          backend:
            serviceName: nginx-service
            servicePort: 80
